--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -12,26 +12,27 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="400.0" 
     xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" 
-    fx:controller="com.comp2042.view.MainMenuController">
+    fx:controller="com.comp2042.view.MainMenuController"
+    style="-fx-background-image: url('@backgrounds/menu_background.png'); -fx-background-size: cover; -fx-background-repeat: no-repeat;">
     
     <children>
-        <ImageView fitHeight="600.0" fitWidth="400.0" preserveRatio="false">
-            <Image url="@backgrounds/menu_background.png" />
-        </ImageView>
-        
         <VBox alignment="CENTER"
               maxHeight="-Infinity" maxWidth="-Infinity"
               minHeight="-Infinity" minWidth="-Infinity"
               prefHeight="600.0" prefWidth="400.0" spacing="20.0"
               AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" 
-              AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0">
+              AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0"
+              style="-fx-background-color: rgba(0, 0, 0, 0.3);">
             <children>
                 <Label text="TetrisJFX">
                     <font>
                         <Font name="System Bold" size="36.0" />
                     </font>
+                    <style>-fx-text-fill: white;</style>
                 </Label>
-                <Label text="Select Level" />
+                <Label text="Select Level">
+                    <style>-fx-text-fill: white;</style>
+                </Label>
                 <Button fx:id="easyButton" mnemonicParsing="false" onAction="#onEasyClicked" prefWidth="120.0" text="Easy" />
                 <Button fx:id="normalButton" mnemonicParsing="false" onAction="#onNormalClicked" prefWidth="120.0" text="Normal" />
                 <Button fx:id="hardButton" mnemonicParsing="false" onAction="#onHardClicked" prefWidth="120.0" text="Hard" />
